--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "pg": "8.16.0",
     "pug": "3.0.3",
     "reflect-metadata": "0.2.2",
+    "sass": "1.89.2",
     "typeorm": "0.3.24",
     "valibot": "1.1.0"
   }
